--- a/HW03.ipynb
+++ b/HW03.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,19 +60,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {
     "tags": [
      "work_cell"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    leng = len(ran)//2\\n    var_1 = i0\\n    var_2 = i1\\n    sum1 = 0\\n    sum_temp = 0\\n    # TODO: fill in this function\\n    for i in range(1,leng+1):\\n      sum_temp = var_1 + var_2\\n      sum1 = sum1+sum_temp\\n      var_1 = var_1+1\\n      var_2 = var_2-1  \\n    if len(ran) % 2 == 0:\\n      sum1 += var_1 \\n    else:\\n      sum_temp = var_1 + var_2\\n      sum1 += sum_temp\\n      var_1 += 1\\n      var_2 -= 1\\n    return sum1\\n  elif(i0<i1): # if var_1 > then var_2 then do so\\n    ran = range(i1,i0)\\n    leng = len(ran)//2\\n    var_1 = i1\\n    var_2 = i0\\n    sum1 = 0\\n    sum_temp = 0\\n    # TODO: fill in this function\\n    for i in range(1,leng+1):\\n      sum_temp = var_1 + var_2\\n      sum1 = sum1+sum_temp\\n      var_1 = var_1-1\\n      var_2 = var_2+1  \\n    if len(ran) % 2 == 0:\\n      sum1 += var_1 \\n    else:\\n      sum_temp = var_1 + var_2\\n      sum1 += sum_temp\\n      var_1 = var_1-1\\n      var_2 = var_2+1\\n    return sum1\\n'"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Work on exercise 01 here\n",
     "\n",
     "def sum_of_ints(i0, i1):\n",
+    "  ran = 0\n",
     "  if(i0<i1):\n",
-    "    ran = range(i0,i1)\n",
+    "    ran = range(i0,i1+1)\n",
+    "\n",
+    "  else:\n",
+    "    ran = range(i1,i0+1)\n",
+    "  sum_list = list(ran)\n",
+    "  int_sum = sum(sum_list)\n",
+    "  return int_sum\n",
+    "\n",
+    "'''\n",
     "    leng = len(ran)//2\n",
     "    var_1 = i0\n",
     "    var_2 = i1\n",
@@ -92,7 +112,7 @@
     "      var_1 += 1\n",
     "      var_2 -= 1\n",
     "    return sum1\n",
-    "  else: # if var_1 > then var_2 then do so\n",
+    "  elif(i0<i1): # if var_1 > then var_2 then do so\n",
     "    ran = range(i1,i0)\n",
     "    leng = len(ran)//2\n",
     "    var_1 = i1\n",
@@ -113,28 +133,7 @@
     "      var_1 = var_1-1\n",
     "      var_2 = var_2+1\n",
     "    return sum1\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "46"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(range(-100,-54))\n",
-    "\n"
+    "'''\n"
    ]
   },
   {
@@ -150,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "tags": [
      "work_cell"
@@ -228,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +236,7 @@
        "367.78"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "tags": [
      "work_cell"
@@ -410,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "tags": [
      "work_cell"
@@ -462,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "tags": [
      "work_cell"
@@ -520,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {
     "tags": [
      "work_cell"
@@ -597,25 +596,31 @@
     "\n",
     "for i in info_cities:\n",
     "    dist = distance(largest_city,i)\n",
+    "    city_distances.append({\n",
+    "        'name':  i['name'],\n",
+    "        'pop': i['pop'],\n",
+    "        'distance': dist \n",
+    "    })\n",
     "    i['distance'] = dist\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "03D: All tests passed 🎉🎉🎉\n",
       "03D: All tests passed 🎉🎉🎉\n"
      ]
     }
    ],
    "source": [
     "# Test 03D\n",
-    "#Tests.test(\"03D\", city_distances)\n",
+    "Tests.test(\"03D\", city_distances)\n",
     "\n",
     "Tests.test(\"03D\", info_cities)"
    ]
@@ -647,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 40,
    "metadata": {
     "tags": [
      "work_cell"
@@ -655,11 +660,10 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "expected ':' (1500249919.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[60], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    for i in cities_by_distance[:3]\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m expected ':'\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Songjiang', 'country': 'CN', 'admin1': 'Shanghai Shi', 'lat': 31.03595, 'lon': 121.2146, 'pop': 130218, 'distance': 0.3065440987851497}, {'name': 'Zhujiajiao', 'country': 'CN', 'admin1': 'Shanghai Shi', 'lat': 31.10757, 'lon': 121.05696, 'pop': 60000, 'distance': 0.4171640354824465}, {'name': 'Kunshan', 'country': 'CN', 'admin1': 'Jiangsu Sheng', 'lat': 31.37762, 'lon': 120.95431, 'pop': 1600000, 'distance': 0.5271747551808571}]\n"
      ]
     }
    ],
@@ -669,26 +673,32 @@
     "# Sort the array and get the name and population of the 3 cities closest to the largest city\n",
     "\n",
     "cities_by_distance = []\n",
-    "cities_by_distance = sorted(info_cities, key=lambda city: city['distance'])\n",
+    "def distKey(D):\n",
+    "    return D['distance']\n",
+    "\n",
+    "cities_by_distance = sorted(info_cities, key=distKey)\n",
     "\n",
     "\n",
     "closest_3 = {}\n",
     "\n",
-    "for i in cities_by_distance[:3]\n",
-    "    \n",
+    "cities_3 = cities_by_distance[1:4]\n",
+    "print(cities_3)\n",
+    "\n",
+    "for i in cities_3:\n",
+    "    closest_3[i['name']] = i['pop']\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR Check city names. Couldn't find all of the correct cities in the answer.\n"
+      "03E: All tests passed 🎉🎉🎉\n"
      ]
     }
    ],
@@ -736,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 42,
    "metadata": {
     "id": "S2bnMyEoWmxL",
     "tags": []
@@ -770,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 43,
    "metadata": {
     "tags": [
      "work_cell"
@@ -856,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 44,
    "metadata": {
     "tags": [
      "work_cell"
@@ -874,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 46,
    "metadata": {
     "tags": [
      "work_cell"
@@ -997,7 +1007,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 47,
    "metadata": {
     "id": "JdA6xihhraSa",
     "tags": []
@@ -1042,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 48,
    "metadata": {
     "tags": []
    },
